<resources>
    <string name="app_name">PR12Nemitko24.106</string>
    <string name="_30_min">30 min</string>
    <string name="_1583_steps">1583 steps</string>
    <string name="_62_kg">62 kg</string>
    <string name="_59_kcal">59 kcal</string>
    <string name="_1_3_km">1.3 km</string>
    <string name="smart_device">моё смарт-устройство</string>
    <string name="_82_bmp">82 bmp</string>
    <string name="little_info">Краткая информация</string>
    <string name="routes">Маршруты</string>
    <string name="info">Информация</string>
    <string name="steps">1583 steps</string>
</resources>