<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/rectangle_12"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="350dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/rectangle_12"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="249dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/rectangle_12"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="151dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="159dp"
        android:layout_height="159dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/rectangle_3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="556dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/favorite"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="252dp"
        tools:layout_editor_absoluteY="583dp" />

    <TextView
        android:id="@+id/bmp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_82_bmp"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="594dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="128dp"
        android:layout_height="56dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/_528474303176360636_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="642dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="159dp"
        android:layout_height="159dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/rectangle_3"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="556dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/network_check"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="583dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="129dp"
        android:layout_height="55dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/scale_1200__1__1"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="643dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/rectangle_12"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="450dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/rectangle_1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="34dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/rotate_left"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="461dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/watch_later"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="363dp" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/whatshot"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="265dp" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/place"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="170dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/devices_other"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="49dp" />

    <TextView
        android:id="@+id/smart_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smart_device"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="64dp" />

    <TextView
        android:id="@+id/km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_3_km"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="295dp"
        tools:layout_editor_absoluteY="170dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/kcal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_59_kcal"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="295dp"
        tools:layout_editor_absoluteY="273dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_30_min"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="298dp"
        tools:layout_editor_absoluteY="372dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1583_steps"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="253dp"
        tools:layout_editor_absoluteY="472dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_62_kg"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="594dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>